--- a/src/app/routes/drop/drop.component.html
+++ b/src/app/routes/drop/drop.component.html
@@ -33,7 +33,7 @@
                             <td class="pb-4" colspan="5">
                                 <button (click)="i.collapsed = !i.collapsed" class="btn btn-block btn-secondary font-weight-bold">Servants List</button>
                                 <div [collapse]="i.collapsed" [isAnimated]="true" class="item-collapse">
-                                    <img [alt]="servants" [src]="i.servantsURL">
+                                    <img [src]="i.servantsURL" alt="servants">
                                 </div>
                             </td>
                         </tr>
