Added anchor link and nav

--- a/src/app/components/item-drop-table/item-drop-table.component.html
+++ b/src/app/components/item-drop-table/item-drop-table.component.html
@@ -1,7 +1,7 @@
 <table class="table table-sm">
     <tbody>
         <ng-container *ngFor="let i of items">
-            <tr class="bg-primary text-light item-header">
+            <tr [id]="idPrefix + i.id" class="bg-primary text-light item-header">
                 <td colspan="5">
                     <div>
                         <header>
