--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="background-color: #e3f2fd;">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary" style="background-color: #e3f2fd;">
     <a class="navbar-brand" href="#">FateGO</a>
     <button (click)="isCollapsed = !isCollapsed" class="navbar-toggler" type="button">
         <span class="navbar-toggler-icon"></span>
@@ -23,6 +23,6 @@
     </div>
 </nav>
 
-<main>
+<main style="margin-top: 5rem">
     <router-outlet></router-outlet>
 </main>
