--- a/src/app/routes/drop/drop.component.html
+++ b/src/app/routes/drop/drop.component.html
@@ -5,6 +5,7 @@
                 <button (click)="clearAllPins()" class="btn btn-primary btn-sm">Clear Pins</button>
             </div>
             <app-item-drop-table [areaNameFilters]="areaFilters" [items]="DROPS" [pinnedItemIds]="pinnedItemIds"></app-item-drop-table>
+            <app-item-anchor-links [items]="DROPS" idPrefix="item-"></app-item-anchor-links>
         </div>
     </div>
 </div>
