Added Anastasia Drops

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <div [collapse]="isCollapsed" [isAnimated]="true" class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item" routerLinkActive="active">
-                <a [routerLink]="Path.Drops" class="nav-link">Drops</a>
+                <a [routerLink]="Path.DROPS" class="nav-link">Drops</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Calculator</a>
