Fix anchor link showing on smaller devices

--- a/src/app/components/item-anchor-links/item-anchor-links.component.html
+++ b/src/app/components/item-anchor-links/item-anchor-links.component.html
@@ -1,4 +1,4 @@
-<section class="fixed-bottom d-sm-none d-md-block">
+<section class="fixed-bottom d-none d-md-block">
     <div class="text-center">
         <a *ngFor="let i of items" [fragment]="idPrefix + i.id" [routerLink]="" class="p-0">
             <img [alt]="i.name" [src]="i.imgURL"/>
